@@ -4,6 +4,8 @@
 \alias{traceplot.default}
 \alias{traceplot,mcmc.list-method}
 \alias{traceplot,rjags-method}
+\alias{traceplot,bugs-method}
+
 
 
 \title{Trace plot of bugs object}
